syntax = "proto3";

package pb;
option go_package = "github.com/clstb/phi/pkg/pb";

message Account {
	string id = 1;
	string name = 2;
}

message Accounts {
	repeated Account data = 1;
}

message AccountsQuery {
	string name = 1;
}
