syntax = "proto3";

package pb;
option go_package = "github.com/clstb/phi/pkg/pb";

import "proto/account.proto";
import "proto/transaction.proto";

service Core {
	rpc CreateAccount(Account) returns (Account);
	rpc GetAccounts(AccountsQuery) returns (Accounts);
	rpc CreateTransactions(stream Transaction) returns (Transactions);
	rpc GetTransactions(TransactionsQuery) returns (Transactions);
}
